k8s/kustomize/overlays/dev/patch-backend-mongo-env.yaml
# This patch file is used with Kustomize to override environment variables for the backend Deployment in the 'dev' overlay.
# It sets the MongoDB connection URLs to point to the 'mongo-dev' service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
